# Project-Fastapi

./: .pre-commit-config.yaml  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
auth/: auth.py  database.py  manager.py
migrations/: env.py
migrations/versions/: 016ab6f0bf81_database_creation.py  48e834783e18_create_db.py  e426193921df_create_new_bd.py  fe929b193378_creata_operation.py
models/: models.py
src/: config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py
src/operations/: router.py
