[tool.poetry]
name = "project-fastapi"
version = "0.1.0"
description = ""
authors = ["Nikolay"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.6.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
fastapi = {extras = ["all"], version = "^0.108.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py312']

[tool.flake8]
max-line-length = 79
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true
